--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
- <!DOCTYPE html>
-<html>
-<body>
+<!DOCTYPE html>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
-</html> 
+<title>Minimal sql.js-httpvfs demo</title>
+<script src="./dist/bundle.js"></script>
+<div>Hello World!</div>
